# pre2006

./: README.md
Programe/Office/Marco/: UserForm1.frm  UserForm1.frx  模块11.bas
Programe/VB/LeanEnglish/: Addfield.frm  Find.frm  Module1.bas  datat.mdb  frmBrow.frm  frmBrow.frx  frmFind.frm  frmMainMdi.frm  frmMainMdi.frx  frmOptions.frm  frmSingleShow.frm  工程1.vbp  工程1.vbw
Programe/VB/ModifyRegedit/: MDIForm1.frm  Registry .bas  Registry Access.bas  modifyregist.txt  reg.txt  reg1.txt  工程1.vbw
Programe/VB/ModifyRegedit1/: Common.bas  Form1.frm  MDIForm1.frx  Mod.bas  Sreg.bas  add.frm  frmAdd.frm  工程1.vbw  (+2 more)
VisualStudioProjects/Genetics/: Coordinate.cpp  Coordinate.h  Draw.cpp  Draw.h  Genetics.cpp  Genetics.h  Genetics.rc  Genetics.sln  Genetics.sln.old  Genetics.vcproj  Genetics.vcproj.7.10.old  GeneticsDoc.cpp  GeneticsDoc.h  GeneticsView.cpp  GeneticsView.h  MainFrm.cpp  ReadMe.txt  Resource.h  stdafx.cpp  stdafx.h
VisualStudioProjects/VC7/socmca/Platform/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  dll.c  dll.cpp  dll.h  exc  libtool  synchronization.cpp  synchronization.h  tchar.h  test.c  test.cpp  thread.c  thread.cpp  thread.h
VisualStudioProjects/VC7/socmca/Platform/lib/: Makefile  Makefile.am  Makefile.in  show.c  show.cpp
VisualStudioProjects/VSMacros80/: AddDirAsSlnFolder.vb  Module1.vb  MyMacros.vsmacros  抽血时间表.xls
我的文档/: 问题列表.htm
我的文档/Chm/: Shell编程.chm  工具条.chm  消息.chm
我的文档/Scrpit/: FPDBNET.CS  JumpTop.js  webscrpit.bas  样式.css
我的文档/Web/: index.htm  web模板.htm
我的文档/模板/: BUG 报告表.dot  康林工作室.dwt
(+2564 files in other folders)
